[master] Fixed form not visible on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -18,5 +18,5 @@
 };
 
 .half-section{
-    height: 85vh;
+    height: 90vh;
 };
